# fastahack

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  disorder.h
tools/: CMakeLists.txt
