set(FASTAHACK_SOURCES
  disorder.c
  Fasta.cpp
  split.cpp
  )

SET(FASTAHACK_SRC_LIB fastahack_src_lib CACHE INTERNAL "THE CORE LIBRARY NAME")

add_library(${FASTAHACK_SRC_LIB}
  ${FASTAHACK_SOURCES}
  )

SET(FASTAHACK_SRC_LIB_DIR ${CMAKE_CURRENT_BINARY_DIR} CACHE INTERNAL "THE CORE LIBRARY NAME")
SET(FASTAHACK_SRC_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "THE CORE INCLUDE DIRECTORY")

